fix horizontal scroll

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -112,13 +113,15 @@
   </div>
   </a>
 
-  <a href="life.html" >
+  
+
+  <a href="split.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title" style="color: black">Foodly</h4>
-      <p class="card-text" style="color: black">An app encouraging people to live healthier by eating nutritious food.</p>
-      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. Research . Interaction . Prototype </small></p>
+      <h4 class="card-title" style="color: black">Split</h4>
+      <p class="card-text" style="color: black">A visualized calculator for splitting bills among multiple users.</p>
+      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -126,13 +129,14 @@
   </div>
   </a>
 
-  <a href="split.html" >
+
+  <a href="life.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title" style="color: black">Split</h4>
-      <p class="card-text" style="color: black">A visualized calculator for splitting bills.</p>
-      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
+      <h4 class="card-title" style="color: black">Foodly</h4>
+      <p class="card-text" style="color: black">An app encouraging people to live healthier by eating nutritious food.</p>
+      <p> <small> Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
