finish March 1st

--- a/life.html
+++ b/life.html
@@ -356,7 +356,7 @@
     </div>
   </div>
 
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Split</h4>
@@ -367,7 +367,7 @@
     </div>
   </div>
   
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
