--- a/journey.html
+++ b/journey.html
@@ -18,7 +18,7 @@
 
 
 
-<nav class="navbar navbar-expand-md navbar-darkt" id="navbarp">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbarp">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -451,7 +451,7 @@
       <a href="uber.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Split</h4>
@@ -462,7 +462,7 @@
     </div>
   </div>
   
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
