--- a/split.html
+++ b/split.html
@@ -354,19 +354,18 @@
       <a href="uber.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Split</h4>
       <p class="card-text">A visualized calculator for spliting bills.</p>
-    
     </div>
     <div class="card-footer">
       <a href="split.html" class="card-link">Read more</a>
     </div>
   </div>
   
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
