--- a/uber.html
+++ b/uber.html
@@ -256,7 +256,7 @@
       <a href="split.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Split</h4>
@@ -267,7 +267,7 @@
     </div>
   </div>
   
-  <div class="card text-center" style="visibility: hidden;">
+  <div class="card text-center hiddenCard" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Fuzhou</h4>
