--- a/journey.html
+++ b/journey.html
@@ -78,7 +78,9 @@
     <p class="intro">
       “Traveling – it leaves you speechless, then turns you into a storyteller.”  
     <br><br>
-    Journey is an user-centered app that aims to create a seamless experience for travelers to record, customize and share their trips with others.
+    Mobile apps provide us methods to record our stories during traveling, while sometimes it occupies our attention and prevents us to engage with the space and people around us. 
+    <br><br>
+    By doing user research, wireframe and prototype, I developed an app called journey, which aims to create a seamless experience for travelers to record their trips in a personal timeline, and share it with other travelers on a social platform.
 
     </p>
 
@@ -105,6 +107,7 @@
     <div class="container">
       <img src="image/journey/55.png" class="img-fluid" alt="Responsive image">
     </div>
+    <hr>
 <!--     <h4>Content</h4>
     <ul>
       <li><i class="fas fa-star" style="color: #74b9ff"></i><a href="journey.html#ideation">Ideation</a></li>
@@ -132,17 +135,17 @@
 
     <h4>User Research</h4>
     <p>
-      I did primary research including user survey, and individual interviews. The objective was to gain insights of the traveling habits and figure out design opportunities.
+      To find the question I want to focus on, I did primary research including user surveys and individual interviews. The objective was to gain insights of the traveling habits and figure out design opportunities.
     </p>
 
     <ul>
 
       <li>Online Survey <br>
-        I created a 10-question questionnaire and over 50 people answered it. 
+        I created <a href="https://docs.google.com/forms/d/e/1FAIpQLSc8ep9iS3Cb7BEcPhbmmMIXkWPnPOtmOZo6zRMVwGi7ec-E5w/viewform?usp=sf_link" style="padding-left: 0; padding-right: 0">an online questionnaire</a>. 
       </li> <br>
 
       <li>Individual Interview <br>
-        I conducted three semi-structured interviews with participants. We used open-ended questions so that the participants can share their views. 
+        I conducted 3 semi-structured interviews with participants. By open-ended questions, participants are encouraged to share their views. 
       </li> <br>
 
     </ul>
