--- a/resume.html
+++ b/resume.html
@@ -49,9 +49,14 @@
 
 
 <!-- resume -->
-<div class="container" id="resume">
+
+<div class="container" id="resume" style="padding-top: 100px">
+
   <img src="image/resume/1.jpg" class="img-fluid" alt="Responsive image">
+  <a href="image/resume/Resume_Sherry Li.pdf" target="_blank" style="padding-left: 90px;">Download PDF</a>
+
 </div>
+
 
 
 
