--- a/design.html
+++ b/design.html
@@ -151,7 +151,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
-      <p> <small>Peronsl project . UX . Design Thinking</small></p>
+      <p> <small>Personal project . UX . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
