--- a/split.html
+++ b/split.html
@@ -138,9 +138,20 @@
      <hr>
 
     <h4 id="research">User Research</h4>
-    <p>I did primary research including user survey, and experiments with existing apps. The objective was to gain insights of user pain points and figure out potential ways to improve on existing products.</p>
+    <p>I did primary research including user survey, and experiments with existing apps. The objective was to gain insights of the most necessary elements and user pain points.</p>
     <h6><strong>User Survey</strong></h6>
     <p>I created <a href="https://docs.google.com/forms/d/e/1FAIpQLScqTCC9JI84rKr1I2-HYmdwNhZiAuj2ujEkOWWIQ4-MQES-lw/viewform?usp=sf_link" style="padding-left: 0; padding-right: 0">an online questionnaire</a> and over 50 people answered it.</p>
+       <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+          <img class="img-fluid" src="image/split/35.png">
+        </div>
+        <div class="col-md-2">
+        </div>
+        </div>
+      </div>
 
 <!--      <div class="container">
       <div class="row">
@@ -171,7 +182,7 @@
 
 
 
-     <h4>Highlights for Research Results</h4>
+<!--      <h4>Highlights for Research Results</h4>
      <div class="container">
         <div class="row">
         <div class="col-md-6">
@@ -181,7 +192,7 @@
           <img class="img-fluid" src="image/split/39.png">
         </div>
         </div>
-      </div>
+      </div> -->
 
       <h4>Take Away </h4>
       <div class="container">
