--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div id="selfIntroLarge">
 
-          <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
+          <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate UI/UX designer</h1>
           <p style="margin-top: 20px; margin-bottom: 150px; font-size: 18px; text-align: center">| to think from different perspectives | to design for users | to combine creativity and rationality <br>
 
         </div>
@@ -101,7 +101,7 @@
 
   <a href="journey.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/journey/57.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
       <p class="card-text" style="color: black">An app designed for travelers to record and share their journey.</p>
@@ -117,7 +117,7 @@
 
   <a href="split.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/split/41.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
       <p class="card-text" style="color: black">A visualized calculator for splitting bills among multiple users.</p>
@@ -132,7 +132,7 @@
 
   <a href="life.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/life/64.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
       <p class="card-text" style="color: black">An app encouraging people to live healthier by eating nutritious food.</p>
@@ -153,7 +153,7 @@
 
   <a href="fuzhou.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/fuzhou/60.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
       <p class="card-text" style="color: black">A website designed to preserve the ancient dialect in Fuzhou, China.</p>
@@ -169,7 +169,7 @@
 
   <a href="uber.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
+    <img class="card-img-top" src="image/uber/30.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
