--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- self intro -->
 
-<div id="selfIntro" class="brightcolor" style="width: 100%; text-shadow: 2px 2px 3px #BDBDBD; background-color: #74b9ff; ">
+<div id="selfIntro" class="brightcolor" style="width: 100%;  background-color: #74b9ff; ">
 
      
 
@@ -90,12 +90,171 @@
 
 <!-- project card -->
 
-<div class="container projectCategory">
-  <h3 >UI/UX Projects</h3>
+<!-- <div class="container projectCategory"> -->
+<!--   <h3 >UI/UX Projects</h3> -->
 <!--   <a class="more" href="design.html">View More Projects</a> -->
+<!-- </div> -->
+
+
+
+
+
+<!-- <div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/journey/59.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
 </div>
 
-<div class="card-deck" id="projectCard">
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="split.html" class="rowproject">
+      <img class="card-img-top" src="image/split/43.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="life.html" class="rowproject">
+      <img class="card-img-top" src="image/life/66.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="fuzhou.html" class="rowproject">
+      <img class="card-img-top" src="image/fuzhou/62.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="uber.html" class="rowproject">
+      <img class="card-img-top" src="image/uber/31.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-8">
+    <a href="uber.html" class="rowproject">
+      <img class="card-img-top" src="image/landmark/3.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-2">
+  </div>
+</div> -->
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/journey/59.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="split.html" class="rowproject">
+      <img class="card-img-top" src="image/split/43.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="life.html" class="rowproject">
+      <img class="card-img-top" src="image/life/66.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="fuzhou.html" class="rowproject">
+      <img class="card-img-top" src="image/fuzhou/62.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="uber.html" class="rowproject">
+      <img class="card-img-top" src="image/uber/31.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+<div class="row" style="background-color: white; padding-top: 100px;">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <a href="uber.html" class="rowproject">
+      <img class="card-img-top" src="image/landmark/3.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+
+
+
+
+  
+
+
+
+
+  
+
+<!-- <div class="card-deck" id="projectCard">
   <div class="row">
 
 
@@ -194,7 +353,7 @@
   </div>
 
 </div>
-</div>
+</div> -->
 
 
 
@@ -204,16 +363,12 @@
 
 <!-- project card -->
 
-<div class="container projectCategory">
-  <h3>Other Projects</h3>
-</div>
+
 
 <div class="card-deck" id="projectCard">
-
+  <h5 style="text-align: center; margin: auto; padding-top: 30px; padding-bottom: 30px; color: grey;">Other Projects</h5>
   <div class="row">
     
-  
-
   <a href="architecture.html" >
   <div class="card text-center">
     <img class="card-img-top" src="image/other/1.jpg" alt="Card image cap">
