--- a/journey.html
+++ b/journey.html
@@ -18,7 +18,7 @@
 
 
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbarp">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbarp" style="position: absolute; top: 0;">
   <!-- Brand -->
 
   <!-- Toggler/collapsibe Button -->
@@ -52,7 +52,7 @@
 
 <!-- projec intro -->
 
-<div id="journeyIntro">
+<!-- <div id="journeyIntro">
 
   <div class="jumbotron pageIntroBG">
     <div class="containerimg" style="padding-top: 90px;">
@@ -61,7 +61,9 @@
     </div>
   </div>
 
-</div>
+</div> -->
+
+<img class="img-fluid" src="image/journey/60.jpg">
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
@@ -76,30 +78,14 @@
     <p style="color: #9E9E9E">A Personal Project | Tools: Sketch, Proto.io, html, css, javascript, jQuery</p>
 
     <p class="intro">
-      “Traveling – it leaves you speechless, then turns you into a storyteller.”  
-    <br><br>
-    Mobile apps provide us methods to record our stories during traveling, while sometimes it occupies our attention and prevents us to engage with the space and people around us. 
-    <br><br>
     By doing user research, wireframe and prototype, I developed an app called journey, which aimed to create a seamless experience for travelers to record their trips in a personal timeline, and share with other travelers on a social platform.
 
     </p>
 
-    <div class="container ui">
-      <div class="row">
-        <div class="col-md-3">
-          <img class="img-fluid" src="image/journey/9.png">
-        </div>
-        <div class="col-md-3">
-          <img class="img-fluid" src="image/journey/10.png">
-        </div>
-        <div class="col-md-3">
-          <img class="img-fluid" src="image/journey/11.png">
-        </div>
-        <div class="col-md-3">
-          <img class="img-fluid" src="image/journey/12.png">
-        </div>
-      </div>
+    <div class="container">
+      <img class="img-fluid" src="image/journey/64.gif">
     </div>
+
 
     <hr>
 
