--- a/index.html
+++ b/index.html
@@ -186,72 +186,102 @@
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="journey.html" class="rowproject">
       <img class="card-img-top" src="image/journey/59.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
+  <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/journey/65.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
 </div>
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="split.html" class="rowproject">
       <img class="card-img-top" src="image/split/43.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
+  <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/split/44.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
 </div>
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="life.html" class="rowproject">
       <img class="card-img-top" src="image/life/66.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
+  <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/life/67.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
 </div>
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="fuzhou.html" class="rowproject">
       <img class="card-img-top" src="image/fuzhou/62.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
+  <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/fuzhou/63.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
 </div>
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="uber.html" class="rowproject">
       <img class="card-img-top" src="image/uber/31.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
+  <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/uber/32.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
+  </div>
 </div>
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10">
+  <div class="col-md-10 d-none d-sm-block">
     <a href="uber.html" class="rowproject">
       <img class="card-img-top" src="image/landmark/3.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
+  </div>
+ <div class="col-sm-12 d-md-none">
+    <a href="journey.html" class="rowproject">
+      <img class="card-img-top" src="image/landmark/4.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+    </a>
   </div>
 </div>
 
