--- a/split.html
+++ b/split.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-106987213-1');
 </script>
-    <title>Portfolio</title>
+    <title>Split</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
