--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-106987213-1');
 </script>
-    <title>Portfolio</title>
+    <title>Sherry's Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 <!--     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
@@ -23,16 +23,21 @@
 
 
 
-  </head>
-  <body>
 
+  </head>
+
+<body onload="myFunction()" style="margin:0;">
+
+<div id="loader"><img src="image/loader/1.gif"></div>
+
+<div style="display:none;" id="myDiv" class="animate-bottom">
 
 
 <!-- nav bar -->
 
 
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff; " >
+<nav class="navbar navbar-expand-md navbar-dark primarycolor" id="navbar" >
   <!-- Brand -->
 <!--   <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a>  -->
 
@@ -67,11 +72,11 @@
 
 <!-- self intro -->
 
-<div id="selfIntro" class="brightcolor" style="width: 100%;  background-color: #74b9ff; ">
+<div id="selfIntro" class="brightcolor primarycolor" style="width: 100%; ">
 
      
 
-      <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; text-align: center">
+      <div class="jumbotron" style=" color: white; margin: 0 auto; text-align: center">
 
         <div id="selfIntroLarge">
 
@@ -80,7 +85,7 @@
 
         </div>
 
-        <div id="selfIntroSmall" style="background-color: #74b9ff;">
+        <div id="selfIntroSmall" >
 
           <h1 class="display-3" style="font-size: 26px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, <br>a passionate designer</h1>
           <p style="margin-top: 20px; margin-bottom: 150px; font-size: 14px; text-align: center">| to think from different perspectives <br>| to design for users <br>| to combine creativity and rationality <br>
@@ -186,7 +191,7 @@
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10 d-none d-sm-block">
+  <div class="col-md-10 d-none d-md-block">
     <a href="journey.html" class="rowproject">
       <img class="card-img-top" src="image/journey/59.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
@@ -203,7 +208,7 @@
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10 d-none d-sm-block">
+  <div class="col-md-10 d-none d-md-block">
     <a href="split.html" class="rowproject">
       <img class="card-img-top" src="image/split/43.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
@@ -220,7 +225,7 @@
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10 d-none d-sm-block">
+  <div class="col-md-10 d-none d-md-block">
     <a href="life.html" class="rowproject">
       <img class="card-img-top" src="image/life/66.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
@@ -234,7 +239,7 @@
   </div>
 </div>
 
-<div class="row" style="background-color: white; padding-top: 100px;">
+<!-- <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
   <div class="col-md-10 d-none d-sm-block">
@@ -249,12 +254,12 @@
       <img class="card-img-top" src="image/fuzhou/63.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
-</div>
+</div> -->
 
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10 d-none d-sm-block">
+  <div class="col-md-10 d-none d-md-block">
     <a href="uber.html" class="rowproject">
       <img class="card-img-top" src="image/uber/31.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
@@ -271,7 +276,7 @@
 <div class="row" style="background-color: white; padding-top: 100px;">
   <div class="col-md-1">
   </div>
-  <div class="col-md-10 d-none d-sm-block">
+  <div class="col-md-10 d-none d-md-block">
     <a href="uber.html" class="rowproject">
       <img class="card-img-top" src="image/landmark/3.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
@@ -405,6 +410,18 @@
 
 <!-- project card -->
 
+<div id="aboutme">
+  <h5> "Design is to tell a non-narrative story." </h5>
+  <hr>
+  <p>Hi, I'm Sherry Li, a current senior design student at Washington University in St. Louis and I will be joining Salesforce this summer. Learn more about me on </p>
+  <a class="btn btn-primary blackbutton" href="https://www.linkedin.com/in/sherry-li-062447b2/" target="_blank" role="button" style="margin-top: 15px; margin-right: 5px;  ">Linkedin</a>
+  <span style="position: relative; top: 6px;">/</span>
+  <a class="btn btn-primary blackbutton" href="image/resume/Resume_Sherry Li.pdf" target="_blank" role="button" style="margin-top: 15px; margin-left: 5px; border: 1px black solid;">Download My Resume</a>
+
+
+  
+</div>
+
 
 
 <div class="card-deck" id="projectCard">
@@ -456,6 +473,28 @@
   </div>
 
 </div>
+
+
+
+
+
+
+
+</div>
+
+<script>
+
+window.onload = function(){ 
+
+  document.getElementById("loader").style.display = "none";
+  document.getElementById("myDiv").style.display = "block"; }
+
+</script>
+
+
+
+
+
 
 
 
