--- a/architecture.html
+++ b/architecture.html
@@ -19,7 +19,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+<body onload="myFunction()" style="margin:0;">
+
+<div id="loader"><img src="image/loader/1.gif"></div>
+
+<div style="display:none;" id="myDiv" class="animate-bottom">
 
 
 <!-- nav bar -->
@@ -188,6 +192,23 @@
         <a class="nav-link" href="contact.html">Contact</a>
       </nav>
     </footer> -->
+
+<script>
+
+window.onload = function(){ 
+
+  document.getElementById("loader").style.display = "none";
+  document.getElementById("myDiv").style.display = "block"; }
+
+</script>
+
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
