--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <!--     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 
+<!--     font -->
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -193,14 +196,14 @@
   </div>
   <div class="col-md-10 d-none d-md-block">
     <a href="journey.html" class="rowproject">
-      <img class="card-img-top" src="image/journey/59.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+      <img class="card-img-top" src="image/journey/59s.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
   <div class="col-sm-12 d-md-none">
     <a href="journey.html" class="rowproject">
-      <img class="card-img-top" src="image/journey/65.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
+      <img class="card-img-top" src="image/journey/65s.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
 </div>
@@ -216,7 +219,7 @@
   <div class="col-md-1">
   </div>
   <div class="col-sm-12 d-md-none">
-    <a href="journey.html" class="rowproject">
+    <a href="split.html" class="rowproject">
       <img class="card-img-top" src="image/split/44.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
@@ -233,7 +236,7 @@
   <div class="col-md-1">
   </div>
   <div class="col-sm-12 d-md-none">
-    <a href="journey.html" class="rowproject">
+    <a href="life.html" class="rowproject">
       <img class="card-img-top" src="image/life/67.gif" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
@@ -267,7 +270,7 @@
   <div class="col-md-1">
   </div>
   <div class="col-sm-12 d-md-none">
-    <a href="journey.html" class="rowproject">
+    <a href="uber.html" class="rowproject">
       <img class="card-img-top" src="image/uber/32.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
@@ -277,14 +280,14 @@
   <div class="col-md-1">
   </div>
   <div class="col-md-10 d-none d-md-block">
-    <a href="uber.html" class="rowproject">
+    <a href="landmark.html" class="rowproject">
       <img class="card-img-top" src="image/landmark/3.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
   <div class="col-md-1">
   </div>
  <div class="col-sm-12 d-md-none">
-    <a href="journey.html" class="rowproject">
+    <a href="landmark.html" class="rowproject">
       <img class="card-img-top" src="image/landmark/4.jpg" alt="Card image cap" style="border-radius: 10px; box-shadow: 0px 0px 20px #E0E0E0;">
     </a>
   </div>
@@ -444,7 +447,7 @@
 
   <a href="interior.html" >
   <div class="card text-center">
-    <img class="card-img-top" src="image/other/2.jpg" alt="Card image cap">
+    <img class="card-img-top" src="image/other/2s.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Interior Design</h4>
       <p class="card-text" style="color: black">Hotel Headquater, Office Building, Apartment</p>
@@ -474,7 +477,10 @@
 
 </div>
 
-
+<div style="background-color: white; ">
+  <h2 style="font-family: 'Great Vibes', cursive;">sherry</h2>
+  <p style="margin: 0; padding-bottom: 80px;">Contact me at <br> nachuan@wustl.edu</p>
+</div>
 
 
 
