--- a/interior.html
+++ b/interior.html
@@ -20,7 +20,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
-  <body style="background-color: #F5f5f5">
+  <body onload="myFunction()" style="margin:0;">
+
+<div id="loader"><img src="image/loader/1.gif"></div>
+
+<div style="display:none;" id="myDiv" class="animate-bottom">
+
 
 
 <!-- nav bar -->
@@ -141,6 +146,23 @@
         <a class="nav-link" href="contact.html">Contact</a>
       </nav>
     </footer> -->
+
+
+<script>
+
+window.onload = function(){ 
+
+  document.getElementById("loader").style.display = "none";
+  document.getElementById("myDiv").style.display = "block"; }
+
+</script>
+
+
+
+
+
+
+
 
 
     <!-- Optional JavaScript -->
